objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>BillableCostbyWO__c</fullName>
        <description>used by O&amp;M financial reports- only accessible to O&amp;M act, admins, permission set users</description>
        <formula>IF(Contract__r.Prevailing_Wage_Included__c = &quot;Yes&quot;, (Round(TotalLaborTravelfromTSE__c,2))*Contract__r.Internal_Prevailing_Wage_Rate__c,
(Round(TotalLaborTravelfromTSE__c,2))*OwnerStandardRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Cost by WO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillableRevbyWO__c</fullName>
        <description>used in O&amp;M reporting
access only to O&amp;M accounting, Admins, permission set holders</description>
        <formula>(BillableTravelHoursRound__c+LaborBillableHoursRound__c)* Contract__r.Current_Solar_Electrician_1_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls value from related contract of the Current Solar Electrician Rate (Billable Travel Hours + Billable Labor Hours)</inlineHelpText>
        <label>Billable Rev by WO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillableTravelHoursRound__c</fullName>
        <formula>((CEILING (BillableTravelHours__c* 4)) / 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Travel Hours Round</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillableTravelHours__c</fullName>
        <formula>IF(TotalTravelfromTSE__c&gt;VALUE(Travel_Billable_Cap__c) , VALUE(Travel_Billable_Cap__c),
IF(TotalTravelfromTSE__c&lt;Contract__r.MinimumBillableTravelTime__c, Contract__r.MinimumBillableTravelTime__c,
TotalTravelfromTSE__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Travel Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <label>Billable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <formula>CaseId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <formula>Case.CaseRecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountClosedWOL__c</fullName>
        <formula>IF(totalnumberofWOLs__c&gt;0
&amp;&amp;
totalnumberofWOLs__c=Number_of_Completed_WOLIs__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Closed WOL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <description>This date is populated when the WO needs to be scheduled for a specific date.</description>
        <inlineHelpText>Input a date when there is a specific day that this work needs to be done. If the work can be done on any day, then leave this blank.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Included_In_Reporting_Period_Summary__c</fullName>
        <description>Referenced in RH on the Service Contract</description>
        <formula>IF(AND(WorkType.Name= &quot;Reactive&quot;, 
NOT(ISBLANK(LastWOLIEnd__c)), 
AND(DATEVALUE(LastWOLIEnd__c)  &gt;=  Contract__r.Account.ReportingPeriodStartDate__c,  
DATEVALUE(LastWOLIEnd__c)  &lt;= Contract__r.Account.ReportingPeriodEndDate__c)), 

true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks to see if the Work End Date is between the related Account Reporting period and the Case is a Reactive type.</inlineHelpText>
        <label>Included In Reporting Period (Summary)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_Reporting_Period_Performance__c</fullName>
        <description>To be used in Composer SOQL query - determines if Work Order falls in reporting timeframe, specifically for the O&amp;M Performance Report</description>
        <formula>IF(
  TEXT(Case.Status) &lt;&gt; &quot;Closed&quot; || TEXT(Case.Status) &lt;&gt; &quot;Completed&quot;,true,

IF(
 (TEXT(Case.Status) = &quot;Closed&quot; || TEXT(Case.Status) = &quot;Completed&quot;)
&amp;&amp;
 DATEVALUE(Work_Start_Time__c) &gt;= Account.ReportingPeriodStartDate__c  
&amp;&amp; 
 DATEVALUE(Work_End_Time__c) &lt;= Account.ReportingPeriodEndDate__c, true,

IF(
 (TEXT(Case.Status) = &quot;Closed&quot; || TEXT(Case.Status) = &quot;Completed&quot;)
&amp;&amp;
  NOT(ISBLANK(StartDate))
&amp;&amp;
 ISBLANK(Work_Start_Time__c)
&amp;&amp;
 DATEVALUE(StartDate) &gt;= Account.ReportingPeriodStartDate__c , true,false)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Included Reporting Period (Performance)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LaborBillableHoursRound__c</fullName>
        <formula>(CEILING (TotalWork__c* 4) / 4)</formula>
        <label>Labor Billable Hours Round</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastWOLIEnd__c</fullName>
        <label>Last WOLI End</label>
        <summarizedField>WorkOrderLineItem.End_Time__c</summarizedField>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary PM</fullName>
                </value>
                <value>
                    <fullName>Secondary PM</fullName>
                </value>
                <value>
                    <fullName>Annual PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Completed_WOLIs__c</fullName>
        <label>Number of Completed WOLIs</label>
        <summaryFilterItems>
            <field>WorkOrderLineItem.Status</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>O_M_Package__c</fullName>
        <formula>TEXT(Contract__r.O_M_Package__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>O&amp;M Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerStandardRate__c</fullName>
        <description>used in O&amp;M reporting, only visible to O&amp;M accounting and Admins +permission set users</description>
        <formula>Owner:User.StandardRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Standard Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrevailingWage__c</fullName>
        <formula>Contract__r.Prevailing_Wage_Included__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prevailing Wage?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevailing_Wage_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevailing Wage Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevailing_Wage_Total_Hours__c</fullName>
        <description>Prevailing Wage * Total Labor + Travel from TSE
1x PW for first 8 hours
1.5x PW for next 4 hours
2x PW for remaining hours</description>
        <formula>IF(
TotalLaborTravelfromTSE__c &lt;= 8.0,
Contract__r.Internal_Prevailing_Wage_Rate__c * TotalLaborTravelfromTSE__c ,

IF(
AND(TotalLaborTravelfromTSE__c &gt; 8.0, TotalLaborTravelfromTSE__c &lt;= 12.0) ,
(((TotalLaborTravelfromTSE__c - 8.0) * (Contract__r.Internal_Prevailing_Wage_Rate__c * 1.5))
+ (8.0 * Contract__r.Internal_Prevailing_Wage_Rate__c)) ,

IF(
TotalLaborTravelfromTSE__c &gt; 12.0,
(4.0 * (Contract__r.Internal_Prevailing_Wage_Rate__c * 1.5))
+ (8.0 * Contract__r.Internal_Prevailing_Wage_Rate__c)
+ ((TotalLaborTravelfromTSE__c - 12.0) * (Contract__r.Internal_Prevailing_Wage_Rate__c * 2.0))
,
null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prevailing Wage * Total Labor + Travel from TSE
1x PW for first 8 hours
1.5x PW for next 4 hours
2x PW for remaining hours</inlineHelpText>
        <label>Prevailing Wage Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_WOLI_End_Date_Time__c</fullName>
        <label>Previous WOLI End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <formula>Case.Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ultipro__c</fullName>
        <formula>IF( PrevailingWage__c==&quot;Yes&quot;,  ( SUBSTITUTE(Project__r.Job_Number__c ,&quot;-&quot;,&quot;&quot;)&amp;&quot;1&quot;&amp;Right(WorkOrderNumber,5)) , (SUBSTITUTE(Project__r.Job_Number__c ,&quot;-&quot;,&quot;&quot;)&amp;&quot;0&quot;&amp;Right(WorkOrderNumber,5)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ultipro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Type__c</fullName>
        <formula>TEXT(Contract__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soiling__c</fullName>
        <label>Soiling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Heavy</fullName>
                </value>
                <value>
                    <fullName>Light</fullName>
                </value>
                <value>
                    <fullName>Clean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalLaborTravelfromTSE__c</fullName>
        <formula>TotalWork__c+TotalTravelfromTSE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Travel from TSE + Labor from TSE</inlineHelpText>
        <label>Total Labor + Travel from TSE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTravelfromTSE__c</fullName>
        <inlineHelpText>Rolls up &quot;Travel Duration&quot; field from the related Time Sheet Entries</inlineHelpText>
        <label>Total Travel Hours from TSE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalWork__c</fullName>
        <inlineHelpText>Rolls up &quot;Duration&quot; field from the related Time Sheet Entries</inlineHelpText>
        <label>Total Labor Hours from TSE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Billable_Cap__c</fullName>
        <formula>TEXT(Contract__r.Travel_Billing_Cap_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Billable Cap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Billable_Max__c</fullName>
        <description>converts travel billing cap picklist from related Service Contract to # to be used in formulas, no need to be on layouts</description>
        <formula>Case(  Contract__r.Travel_Billing_Cap_Hours__c , 
&quot;1&quot;,1, 
&quot;2&quot;, 2, 
&quot;3&quot;,3, 
&quot;4&quot;,4, 
&quot;5&quot;,5, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>converts travel billing cap picklist from related Service Contract to # to be used in formulas, no need to be on layouts</inlineHelpText>
        <label>Travel Billable (Max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Billable__c</fullName>
        <formula>TEXT(Contract__r.Travel_Billable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Billable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Start_Time__c</fullName>
        <label>Travel Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Travel_Work_Hours__c</fullName>
        <description>sums up Total Travel Time + Total Work Hours from related WOL&apos;s</description>
        <formula>WorkHoursTravel__c+WorkHoursLabor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>sums up Total Travel Time + Total Work Hours from related WOL&apos;s</inlineHelpText>
        <label>Travel + Work Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vegetation__c</fullName>
        <label>Vegetation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6&quot;</fullName>
                </value>
                <value>
                    <fullName>12&quot;</fullName>
                </value>
                <value>
                    <fullName>18&quot;</fullName>
                </value>
                <value>
                    <fullName>24&quot;</fullName>
                </value>
                <value>
                    <fullName>30&quot;</fullName>
                </value>
                <value>
                    <fullName>36&quot;+</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weather_Conditions__c</fullName>
        <label>Weather Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunny</fullName>
                </value>
                <value>
                    <fullName>Partly Sunny</fullName>
                </value>
                <value>
                    <fullName>Cloudy</fullName>
                </value>
                <value>
                    <fullName>Rainy</fullName>
                </value>
                <value>
                    <fullName>Snow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkHoursLabor__c</fullName>
        <formula>((Work_End_Time__c-Work_Start_Time__c)*24*60)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overall hours, start to finish: Work End Time - Work Start Time
NOT TOTAL HOURS WORKED, JUST TOTAL TIME ON JOB SITE</inlineHelpText>
        <label>Work Hours- Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkHoursTravel__c</fullName>
        <formula>((Work_Start_Time__c-Travel_Start_Time__c)*24*60)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Hours- Travel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkOrderStartDate__c</fullName>
        <description>For Conga Reports</description>
        <formula>IF(ISBLANK(Work_Start_Time__c), DATEVALUE(StartDate), DATEVALUE(Work_Start_Time__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_End_Time__c</fullName>
        <label>Work End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Start_Time__c</fullName>
        <label>Work Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Type_Name__c</fullName>
        <description>Convenience formula field - used in apex code.</description>
        <formula>WorkType.Name</formula>
        <label>Work Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalnumberofWOLs__c</fullName>
        <description>how many WOLs are on the WO?</description>
        <label>Total WOLs</label>
        <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>Technician__c</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>Project__c</columns>
        <columns>WorkType</columns>
        <columns>Travel_Start_Time__c</columns>
        <columns>Work_Start_Time__c</columns>
        <columns>Work_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Last_7_Days</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Priority</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Created Last 7 Days</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Open_Work_Orders</fullName>
        <columns>Name</columns>
        <columns>WorkType</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <columns>ServiceTerritory</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>New,In Progress,On Hold</value>
        </filters>
        <label>Open Work Orders</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Due_Date_Can_Only_be_set_on_some_Cases</fullName>
        <active>true</active>
        <description>The Due Date can only be specified when the related Case is in Deployment Review, Ops Review, or Escalated to Regional Manager</description>
        <errorConditionFormula>AND(
 CASE(
  Case.Status,
  &quot;Deployment Review&quot;, 1,
  &quot;Ops Review&quot;, 1,
  &quot;Escalated to Regional Manager&quot;, 1,
  0
  ) = 0,
ISCHANGED(Due_date__c)
)</errorConditionFormula>
        <errorDisplayField>Due_date__c</errorDisplayField>
        <errorMessage>The Due Date can only be specified when the related Case is in Deployment Review, Ops Review, or Escalated to Regional Manager</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Cannot_be_set_back_to_null</fullName>
        <active>true</active>
        <description>Once a manual Due Date is set, it cannot be changed back to null. Setting the Due Date updates fields on the SA via process builder, and setting it to NULL could result in SA related issues.</description>
        <errorConditionFormula>AND(
  ISCHANGED(Due_date__c),
  ISBLANK(Due_date__c)
)</errorConditionFormula>
        <errorDisplayField>Due_date__c</errorDisplayField>
        <errorMessage>Once you manually set a Due Date you cannot change this back to NULL. You must specify a date for the work to be done.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <description>The Due Date cannot be set to be in the past.</description>
        <errorConditionFormula>AND(
ISCHANGED( Due_date__c),
Due_date__c &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>Due_date__c</errorDisplayField>
        <errorMessage>The Due Date must be set to a date in the future.</errorMessage>
    </validationRules>
</CustomObject>